# LimTDD

./: .gitignore  .gitmodules  CMakeLists.txt  LimTDD.sln  README.md  Test.ipynb  Test_Syn.ipynb  Test_Syn2.ipynb  Test_Syn3.ipynb  Test_Syn4.ipynb  Test_Syn5.ipynb  Test_Syn_2q_Clifford.ipynb  Untitled.ipynb  Untitled1.ipynb  build.sh  cannot be reduced by h.qasm  cannot be reduced by h2.qasm  data.ipynb  exp1.qasm  gen_cir.ipynb  out0  out1  out2  out3  output  read.ipynb  run.sh  split.qasm  split2.qasm  split3.qasm  testVQE_3.qasm
Benchmarks/: test1.qasm  test2.qasm
DDPackage/: CMakeLists.txt  Cir_import.h  DDPackage.vcxproj  DDPackage.vcxproj.filters  main.cpp
DDPackage/Benchmarks/: test.qasm  test2.qasm
DDPackage/dd/: ComplexCache.hpp  ComplexNumbers.hpp  ComplexTable.hpp  ComplexValue.hpp  ComputeTable.hpp  DDpackageConfig.hpp  Definitions.hpp  Edge.cpp  Edge.hpp  Export.hpp  GateMatrixDefinitions.hpp  Maps.cpp  Maps.hpp  Package.hpp  Tdd.hpp  Tensor.hpp  UniqueTable.hpp
DDPackage/src/: CMakeLists.txt
TDD/: TDD.py  TDD_Q.py  TN.py
TDD/dd/: Tensor.hpp
test/: CMakeLists.txt  lab.cpp  test_bv.cpp  test_cl.cpp  test_cls.cpp  test_clt.cpp  test_core.cpp  test_data.cpp  test_id.cpp  test_qft.cpp  test_tdd.cpp  test_tn.cpp
